# mipy25sczds-team002

./: README.md  build_exe.bat  buildscript-unix.sh  pyproject.toml  requirements.txt  version_info.txt
.github/: ISSUES.md
deadlock-scores-server/: deploy.sh  ecosystem.config.js  package-lock.json  package.json  server.js
docs/: asset_management_system.md  development_guidelines.md  game_design.md  implementation_plan.md  music_system.md  potential_improvements.md  task_distribution.md
src/: main.py
src/entities/: __init__.py  entity.py  items.py  player.py  zombies.py
src/game/: building_templates.py  game_state.py  map_generator.py  settings.py
src/systems/: __init__.py  animation.py  audio.py  collisions.py  effects.py  enemy_spawner.py  item_spawner.py  score.py  ui.py  weapons.py  zombie_spawner.py
src/systems/items/: __init__.py  item_effects.py  item_factory.py  item_types.py
src/systems/weapons/: __init__.py  projectiles.py  weapon_factory.py  weapon_inventory.py  weapon_types.py
src/utils/: constants.py  sprite_loader.py
tests/: test_texture_atlas.py
