[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deadlock"
version = "0.1.0"
description = "Deadlock - A top-down survival game created in Pygame for the MIPY course"
requires-python = ">=3.8"

# Pouze základní závislosti
dependencies = [
    "pygame>=2.0.0",
]

[project.scripts]
deadlock = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
